--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               <h6>Dell UltraSharp 27" 4K Monitor</h6>
               <del>$699.99</del>
               <span style="color: #0047ab">$549.99</span>
-              <a href="index.html" class="stretched-link"></a>
+              <a href="Dell UltraSharp 27.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -264,7 +264,7 @@
               <h6>ASUS ROG Strix Z790-E Gaming WiFi</h6>
               <del>$529.99</del>
               <span style="color: #0047ab">$449.99</span>
-              <a href="index.html" class="stretched-link"></a>
+              <a href="ASUS ROG Strix Z790-E.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -286,7 +286,7 @@
               <h6>ASUS ROG Zephyrus G14 Gaming Laptop</h6>
               <del>$1099.99</del>
               <span style="color: #0047ab">$1649.99</span>
-              <a href="index.html" class="stretched-link"></a>
+              <a href="ASUS ROG Zephyrus.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -308,7 +308,7 @@
               <h6>Samsung 980 PRO 2TB NVMe SSD</h6>
               <del>$249.99</del>
               <span style="color: #0047ab">$199.99</span>
-              <a href="index.html" class="stretched-link"></a>
+              <a href="Samsung 980 PRO.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
