--- a/product.html
+++ b/product.html
@@ -287,18 +287,20 @@
               <p class="card-text">APC Back-UPS Pro 1500VA</p>
               <span>⭐⭐⭐⭐ (1876)</span>
               <p>$249.99</p>
+              <a href="APC Back-UPS.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 cards">
           <div class="card" style="width: 18rem">
-            <img src="images/Asus Rog.jpg" class="card-img-top" alt="..." />
+            <img src="images/h3.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <h5 class="card-title">ASUS</h5>
               <p class="card-text">ASUS ROG Strix Z790-E Gaming WiFi</p>
               <span>⭐⭐⭐⭐ (156)</span><br />
               <del>$529.99</del>
               <span>$449.99</span>
+              <a href="ASUS ROG Strix Z790-E.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -314,13 +316,14 @@
               <p class="card-text">ASUS ROG Swift 34" Curved Gaming...</p>
               <span>⭐⭐⭐⭐ (187)</span>
               <p>$899.99</p>
+              <a href="ASUS ROG Swift 34.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 cards">
           <div class="card" style="width: 18rem">
             <img
-              src="images/Zephyrus G14 gaming laptop.jpg"
+              src="images/h4.jpg"
               class="card-img-top"
               alt="..."
             />
@@ -332,6 +335,7 @@
               <span>⭐⭐⭐⭐ (341)</span><br />
               <del>1899.99</del>
               <span>$1649.99</span>
+              <a href="ASUS ROG Zephyrus.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -348,6 +352,7 @@
               <span>⭐⭐⭐⭐ (876)</span><br />
               <del>199.99</del>
               <span>$179.99</span>
+               <a href="Corsair K95 RGB.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -363,13 +368,14 @@
               <p class="card-text">Corsair Vengeance DDR5 32GB (2x16GB)</p>
               <span>⭐⭐⭐⭐ (398)</span>
               <p>$159.99</p>
+              <a href="Corsair Vengeance.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
         <div class="col-md-4 cards">
           <div class="card" style="width: 18rem">
             <img
-              src="images/Dell ultra sharp.jpg"
+              src="images/h1.jpg"
               class="card-img-top"
               alt="..."
             />
@@ -379,6 +385,7 @@
               <span>⭐⭐⭐⭐ (234)</span><br />
               <del>699.99</del>
               <span>$549.99</span>
+              <a href="Dell UltraSharp 27.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -390,6 +397,7 @@
               <p class="card-text">Dell XPS 15 Laptop</p>
               <span>⭐⭐⭐⭐ (289)</span>
               <p>$1899.99</p>
+              <a href="Dell XPS 15.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -405,6 +413,7 @@
               <p class="card-text">HP Laserjet Pro M404dn</p>
               <span>⭐⭐⭐⭐ (432)</span>
               <p>$329.99</p>
+              <a href="HP Laserjet.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -420,6 +429,7 @@
               <p class="card-text">Intel Core i9-13900K Processor</p>
               <span>⭐⭐⭐⭐ (412)</span>
               <p>$589.99</p>
+              <a href="Intel Core i9.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
@@ -435,6 +445,7 @@
               <p class="card-text">Logitech MX Master 3S Wireless Mouse</p>
               <span>⭐⭐⭐⭐ (2341)</span>
               <p>$99.99</p>
+              <a href="Logitech MX Master.html" class="stretched-link"></a>
             </div>
           </div>
         </div>
