--- a/warranty.html
+++ b/warranty.html
@@ -13,11 +13,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="images/logo (5).png">
     <style>
       .warranty-header {
-        background: linear-gradient(to right, #0047ab, #002f6c);
+        background:linear-gradient(135deg,#000428,#004e92);
         color: white;
-        padding: 60px 0;
+        padding: 70px 20px;
         text-align: center;
       }
 
@@ -36,6 +37,33 @@
       .hei{
         height: 240px;
       }
+      .ik:hover {
+        color:#0047ab;
+        /* box-shadow: 0 0 15px rgba(56,189,248,0.6); */
+        transition: all 0.3s ease;
+        transform: scale(1.2);
+        }
+        /* Hover Dropdown */
+.navbar .dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+}
+
+/* Smooth animation */
+.dropdown-menu {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
     </style>
     <link rel="stylesheet" href="style.css">
   </head>
@@ -56,14 +84,14 @@
 
     <nav
       class="nab navbar navbar-expand-lg sticky-top shadow"
-      style="background-color: #0047ab"
+      style="background:linear-gradient(135deg,#000428,#004e92);"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
+        <a class="navbar-brand text-white" href="index.html">
           <img
-            src="images/logo (2).png"
+            src="images/logo (5).png"
             alt="logo"
-            style="height: 50px; width: 50px"
+            style="height: 55px; width: 60px"
           />
         </a>
 
@@ -79,10 +107,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
             class="navbar-nav me-auto mb-2 mb-lg-0"
-            style="padding-left: 300px"
+            style="padding-left: 250px"
           >
             <li class="nav-item">
-              <a class="nav-link active text-white nav-link-custom" href="index.html">Home</a>
+              <a class="nav-link text-white nav-link-custom" href="index.html">Home</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link  text-white nav-link-custom" href="About.html">About Us</a>
             </li>
 
             <li class="nav-item">
@@ -118,7 +150,7 @@
           </ul>
 
           <div class="d-flex align-items-center gap-3 me-3">
-            <i class="bi bi-search text-white h5 m-0"></i>
+            <i class="bi bi-search text-white h5 m-0 ik"></i>
 
             <div class="position-relative">
               <i class="bi bi-cart text-white h5 m-0"></i>
@@ -133,7 +165,7 @@
     </nav>
 
     <div class="warranty-header">
-      <h1>Product Warranty</h1>
+      <h1 class="fw-bold">Product Warranty</h1>
       <p>Complete warranty information for your peace of mind</p>
     </div>
 
@@ -184,10 +216,16 @@
     </div>
 
     <!-- Footer -->
-    <footer class="container-fluid bg-dark text-white pt-4">
+    <footer class="container-fluid text-white pt-4" style="background:linear-gradient(135deg,#000428,#004e92);">
       <div class="row px-4">
         <div class="col-md-3 mb-3">
-          <h5>PC Centre</h5>
+          <a href="index.html">
+          <img
+            src="images/logo (5).png"
+            alt="logo"
+            style="height: 55px; width: 60px; margin-bottom: 10px"
+          />
+          </a>
           <p>
             Your trusted IT solutions partner with over 2 years of experience
             and 1,000+ products from leading manufacturers.
@@ -200,10 +238,18 @@
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Quick Links</h5>
+          <a href="index.html" style="text-decoration: none; color: white">
           <p class="hovee">Home</p>
+          </a>
+          <a href="product.html" style="text-decoration: none; color: white">
           <p class="hovee">Products</p>
+          </a>
+          <a href="faqs.html" style="text-decoration: none; color: white">
           <p class="hovee">Help & Support</p>
-          <p class="hovee">About Us</p>
+          </a>
+          <a href="About.html" style="text-decoration: none; color: white">
+            <p class="hovee">About Us</p>
+          </a>
           <a href="Contact.html" style="text-decoration: none; color: white">
             <p class="hovee">Contact</p>
             </a>
