--- a/About.html
+++ b/About.html
@@ -1,52 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Fast Delivery - PC Centre</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
-    <link rel="icon" href="images/logo (5).png">
+<head>
+  <meta charset="UTF-8" />
+  <title>About Us - PC Centre</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="images/logo (5).png">
 
-    <style>
-      .hero {
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+
+  <style>
+    body {
+  overflow-x: hidden;
+  background-color:aliceblue;
+ }
+
+    /* HERO */
+    .about-hero {
+      padding: 100px 0;
+      background: linear-gradient(135deg, #020617, #0f172a);
+      text-align: center;
+    }
+
+    .about-hero h1 {
+      font-size: 3rem;
+      font-weight: 700;
+      color: #38bdf8;
+    }
+
+    .about-hero p {
+      max-width: 700px;
+      margin: 20px auto 0;
+      color: #cbd5f5;
+      font-size: 1.1rem;
+    }
+
+    /* SECTIONS */
+    .about-section {
+      padding: 80px 0;
+    }
+
+    .about-box {
+      background: #020617;
+      border-radius: 16px;
+      padding: 30px;
+      height: 100%;
+      transition: 0.3s;
+    }
+
+    .about-box:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+    }
+
+    .about-box i {
+      font-size: 40px;
+      color: #38bdf8;
+      margin-bottom: 15px;
+    }
+
+    .about-box h5 {
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
+
+    /* STATS */
+    .stats {
+      background: #020617;
+      padding: 60px 0;
+      text-align: center;
+    }
+
+    .stat-box h2 {
+      color: #38bdf8;
+      font-weight: 700;
+    }
+
+    .stat-box p {
+      color: #94a3b8;
+      margin: 0;
+    }
+
+    /* CTA */
+    .about-cta {
+      padding: 70px 20px;
+      text-align: center;
+      color: #fff;
+    }
+
+    .about-cta h2 {
+      font-weight: 700;
+    }
+
+    .about-cta p {
+      max-width: 600px;
+      margin: 15px auto;
+    }
+
+    .about-cta a {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 30px;
+      color: #fff;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .about-cta a:hover {
+      opacity: 0.9;
+    }
+
+    .support-hero {
         background:linear-gradient(135deg,#000428,#004e92);
         color: white;
         padding: 70px 20px;
         text-align: center;
       }
-
-      .icon-box i {
-        font-size: 40px;
-        color: #0047ab;
-      }
-
-      .icon-box {
-        background: #fff;
-        border-radius: 10px;
-        padding: 30px;
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-        transition: 0.3s;
-      }
-
-      .icon-box:hover {
-        transform: translateY(-5px);
-      }
-
-      .hovee{
-  transition: all 0.3s ease;
-}
-.hovee:hover{
-  color:#007bff;
-}
-
-.ik:hover {
+      .ik:hover {
         color:#0047ab;
         /* box-shadow: 0 0 15px rgba(56,189,248,0.6); */
         transition: all 0.3s ease;
@@ -74,11 +148,11 @@
     transform: translateY(0);
   }
 }
-    </style>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-  </head>
+  </style>
+</head>
 
-  <body>
+<body>
+
     <!-- header -->
     <div
       class="container-fluid bg-dark text-white py-2 px-4 d-flex justify-content-between align-items-center"
@@ -125,7 +199,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link  text-white nav-link-custom" href="About.html">About Us</a>
+              <a class="nav-link active  text-white nav-link-custom" href="About.html">About Us</a>
             </li>
 
             <li class="nav-item">
@@ -175,78 +249,108 @@
       </div>
     </nav>
 
-    <!-- HERO  -->
-    <section class="hero">
-      <h1 class="fw-bold">Fast & Reliable Delivery</h1>
-      <p class="mt-3">
-        Get your PC Centre products delivered quickly, safely, and on time.
-      </p>
+  <section class="support-hero">
+      <h1 class="fw-bold">About PC Centre</h1>
+      <p class="mt-2">Your trusted destination for premium laptops, accessories, and cutting-edge technology — delivering quality, reliability, and innovation.</p>
     </section>
 
-    <div class="container my-5">
-      <div class="row text-center g-4">
+  <!-- ABOUT INFO -->
+  <section class="about-section">
+    <div class="container">
+      <div class="row g-4">
+
         <div class="col-md-4">
-          <div class="icon-box">
-            <i class="bi bi-truck"></i>
-            <h5 class="mt-3">Same Day Dispatch</h5>
-            <p>Orders placed before 3 PM are dispatched on the same day.</p>
+          <div class="about-box text-center bg-white shadow">
+            <i class="bi bi-bullseye" style="color: #0047AB;"></i>
+            <h5>Our Mission</h5>
+            <p>
+              To provide high-quality computer products with honest pricing,
+              expert guidance, and excellent customer service.
+            </p>
           </div>
         </div>
 
         <div class="col-md-4">
-          <div class="icon-box">
-            <i class="bi bi-clock-history"></i>
-            <h5 class="mt-3">24–48 Hours Delivery</h5>
-            <p>Fast delivery across major cities within 24 to 48 hours.</p>
+          <div class="about-box text-center bg-white shadow">
+            <i class="bi bi-eye" style="color: #0047AB;"></i>
+            <h5>Our Vision</h5>
+            <p>
+              To become Pakistan’s most trusted and innovative IT retail brand,
+              empowering people through technology.
+            </p>
           </div>
         </div>
 
         <div class="col-md-4">
-          <div class="icon-box">
-            <i class="bi bi-shield-check"></i>
-            <h5 class="mt-3">Safe Packaging</h5>
-            <p>Secure and damage-free packaging for all products.</p>
+          <div class="about-box text-center bg-white shadow">
+            <i class="bi bi-award" style="color: #0047AB;"></i>
+            <h5>Why Trust Us</h5>
+            <p>
+              Genuine products, official warranties, and a passionate team
+              that values long-term customer relationships.
+            </p>
           </div>
         </div>
+
       </div>
     </div>
+  </section>
 
-    <div class="container mb-5">
-      <div class="row">
-        <div class="col-md-6">
-          <h4>Delivery Coverage</h4>
-          <p>
-            PC Centre delivers products all over Pakistan through trusted <br />
-            courier partners ensuring fast and safe shipping.
-          </p>
-          <ul>
-            <li>Karachi, Lahore, Islamabad</li>
-            <li>Rawalpindi, Faisalabad, Multan</li>
-            <li>Other cities within 3–5 working days</li>
-          </ul>
+  <!-- STATS -->
+  <section class="stats" style="background:linear-gradient(135deg,#000428,#004e92);">
+    <div class="container">
+      <div class="row g-4">
+
+        <div class="col-md-3 col-6">
+          <div class="stat-box ">
+            <h2 class="text-white">5K+</h2>
+            <p class="text-white">Happy Customers</p>
+          </div>
         </div>
 
-        <div class="col-md-6">
-          <h4>Important Notes</h4>
-          <ul>
-            <li>Delivery time may vary during sales or public holidays</li>
-            <li>Tracking number provided after dispatch</li>
-            <li>Cash on Delivery available in selected cities</li>
-          </ul>
+        <div class="col-md-3 col-6">
+          <div class="stat-box">
+            <h2 class="text-white">100+</h2>
+            <p class="text-white">Products</p>
+          </div>
         </div>
+
+        <div class="col-md-3 col-6">
+          <div class="stat-box">
+            <h2 class="text-white">10+</h2>
+            <p class="text-white">Top Brands</p>
+          </div>
+        </div>
+
+        <div class="col-md-3 col-6">
+          <div class="stat-box">
+            <h2 class="text-white">24/7</h2>
+            <p class="text-white">Support</p>
+          </div>
+        </div>
+
       </div>
     </div>
+  </section>
 
-    <footer class="container-fluid text-white pt-4" style="background:linear-gradient(135deg,#000428,#004e92);">
+  <!-- CTA -->
+  <section class="about-cta bg-dark">
+    <h2>Technology You Can Trust</h2>
+    <p>
+      Whether you're a student, professional, or gamer —
+      PC Centre is here to power your journey.
+    </p>
+    <a href="product.html">Explore Products</a>
+  </section>
+  <!-- Footer -->
+    <footer class="container-fluid bg-dark text-white pt-4" style="background:linear-gradient(135deg,#000428,#004e92);">
       <div class="row px-4">
         <div class="col-md-3 mb-3">
-          <a href="index.html">
           <img
             src="images/logo (5).png"
             alt="logo"
             style="height: 55px; width: 60px; margin-bottom: 10px"
           />
-          </a>
           <p>
             Your trusted IT solutions partner with over 2 years of experience
             and 1,000+ products from leading manufacturers.
@@ -303,6 +407,7 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
 </html>
