--- a/Asus.html
+++ b/Asus.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PCcentre</title>
-    <link rel="icon" href="images/logo (2).png" />
+    <title>ASUS - PC Centre</title>
+    <link rel="icon" href="images/logo (5).png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -14,84 +14,113 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.js"
+      integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+      crossorigin="anonymous"
+    ></script>
     <style>
-       .head{
- background-color: #084298;
-  color: white;
-  padding-left: 30px;
- }
- .head h6{
-  padding-top: 30px;
-  padding-bottom: 30px;
- }
- .head p{
-  padding-bottom: 70px;
- }
-.info-section{
-  display: flex;
-  gap: 20px;
-  padding: 40px;
-}
-.info-box{
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  width: 400px;
-  height: 100px;
-  text-align: center;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition: 0.3s;
-}
-.info-box:hover{
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-.info-box h6{
-  color: #007bff;
-  font-size: 24px;
-  margin-top: 20px;
-}
-.info-box p{
-  color: #555;
-  margin-top: 5px;
-  font-size: 14px;
-}
-/* .row{
-  padding-left: 10px;
-} */
- .ssss {
-   background-color: #fff;
-   border: 1px solid #ddd;
-   border-radius: 8px;
-   width: 300px;
-   /* padding: 15px; */
-   text-align: center;
-   height: 240px;
-   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-   transition: 0.3s;
- }
+      .support-hero {
+        background:linear-gradient(135deg,#000428,#004e92);
+        color: white;
+        padding: 70px 20px;
+        text-align: center;
+      }
+       /* STATS */
+    .stat-box {
+      background:#fff;
+      padding:30px;
+      border-radius:12px;
+      box-shadow:0 6px 15px rgba(0,0,0,.1);
+      text-align:center;
+      height:100%;
+    }
 
- .parrot {
-   display: flex;
-   justify-content: center;
-   gap: 20px;
-   padding: 30px;
-   flex-wrap: wrap;
- }
+    /* PRODUCTS */
+    .section-title {
+      text-align:center;
+      font-weight:600;
+      margin-bottom:40px;
+    }
 
- .box112233 {
-   background-color: #fff;
-   border: 1px solid #ddd;
-   border-radius: 8px;
-   width: 1200px;
-   margin: 40px auto;
-   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
- }
+    .card {
+      background:#fff;
+      border-radius:14px;
+      box-shadow:0 8px 20px rgba(0,0,0,.12);
+      height:100%;
+      display:flex;
+      flex-direction:column;
+      transition:.3s;
+      text-align: center;
+    }
 
- .box112233 h5,
- p {
-   padding-left: 35px;
-   padding-top: 20px;
- }
+    .card:hover { transform: translateY(-6px); }
+
+    .card img {
+      height:220px;
+      object-fit:contain;
+      background:#f8f9fa;
+      padding:20px;
+      text-align: center;
+      margin-left: 40px;
+    }
+
+    .card .card-body {
+      text-align:center;
+    }
+
+    /* WHY DELL */
+    .why-dell {
+      background:#0b1d39;
+      color:white;
+      text-align:center;
+    }
+
+    .why-dell i {
+      font-size:42px;
+      color:#0d6efd;
+      margin-bottom:10px;
+    }
+
+    /* DEALERS */
+    .dealer-card {
+      background:#fff;
+      padding:30px;
+      border-radius:12px;
+      text-align:center;
+      box-shadow:0 6px 15px rgba(0,0,0,.1);
+      height:100%;
+    }
+
+    section { padding: 80px 0; }
+    .ik:hover {
+        color:#0047ab;
+        /* box-shadow: 0 0 15px rgba(56,189,248,0.6); */
+        transition: all 0.3s ease;
+        transform: scale(1.2);
+        }
+
+        /* Hover Dropdown */
+.navbar .dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+}
+
+/* Smooth animation */
+.dropdown-menu {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
     </style>
   </head>
   <body>
@@ -111,14 +140,14 @@
 
     <nav
       class="nab navbar navbar-expand-lg sticky-top shadow"
-      style="background-color: #0047ab"
+      style="background:linear-gradient(135deg,#000428,#004e92);"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
+        <a class="navbar-brand text-white" href="index.html">
           <img
-            src="images/logo (2).png"
+            src="images/logo (5).png"
             alt="logo"
-            style="height: 50px; width: 50px"
+            style="height: 55px; width: 60px"
           />
         </a>
 
@@ -134,10 +163,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
             class="navbar-nav me-auto mb-2 mb-lg-0"
-            style="padding-left: 300px"
+            style="padding-left: 250px"
           >
             <li class="nav-item">
-              <a class="nav-link active text-white nav-link-custom" href="index.html">Home</a>
+              <a class="nav-link  text-white nav-link-custom" href="index.html">Home</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link  text-white nav-link-custom" href="About.html">About Us</a>
             </li>
 
             <li class="nav-item">
@@ -154,7 +187,7 @@
 
             <li class="nav-item dropdown">
               <a
-                class="nav-link text-white"
+                class="nav-link text-white active"
                 href="#"
                 role="button"
                 data-bs-toggle="dropdown"
@@ -173,7 +206,7 @@
           </ul>
 
           <div class="d-flex align-items-center gap-3 me-3">
-            <i class="bi bi-search text-white h5 m-0"></i>
+            <i class="bi bi-search text-white h5 m-0 ik"></i>
 
             <div class="position-relative">
               <i class="bi bi-cart text-white h5 m-0"></i>
@@ -187,128 +220,91 @@
       </div>
     </nav>
 
-          <!-- RIGHT ICONS -->
-          <!-- <div class="d-flex align-items-center gap-3 me-3">
-            <i class="bi bi-search text-white h5 m-0"></i>
 
-            <div class="position-relative">
-              <i class="bi bi-cart text-white h5 m-0"></i>
-              <span
-                class="badge bg-danger position-absolute top-0 start-100 translate-middle px-2"
-                >0</span
-              >
-            </div>
-          </div>
+    <section class="support-hero">
+      <h1 class="fw-bold">ASUS Product Catalog</h1>
+      <p class="mt-2">Browse our complete selection of ASUS products. All items come with manufacturer warranty and our dedicated support.</p>
+    </section>
+
+    <!-- STATS -->
+<section class="dell-stats container">
+  <div class="row text-center g-4">
+    <div class="col-md-4"><div class="stat-box"><h2>3</h2><p>ASUS Products</p></div></div>
+    <div class="col-md-4"><div class="stat-box"><h2>3</h2><p>Product Categories</p></div></div>
+    <div class="col-md-4"><div class="stat-box"><h2>✔</h2><p>Authorized Dealer</p></div></div>
+  </div>
+</section>
+
+<!-- PRODUCTS -->
+<section class="container dell-products">
+  <h3 class="section-title">Featured ASUS Products</h3>
+  <div class="row g-4 justify-content-center">
+    <div class="col-md-4">
+      <div class="card">
+        <img src="images/Asus Rog Swift.jpg" alt="">
+        <div class="card-body">
+          <h6>ASUS ROG Swift 34" Curved Gaming Monitor</h6>
+          <span>⭐⭐⭐⭐⭐ (187)</span>
+          <h5>$899.99</h5>
         </div>
-      </div>
-    </nav> -->
-
-    <!-- ------------------info section------------ -->
-    <div class="head">
-      <h6>ASUS Product Catalog</h6>
-      <p>
-        Browse our complete selection of Dell products. All items come with
-        manufacturer Warranty and our dedicated support.
-      </p>
-    </div>
-
-    <div class="info-section">
-      <div class="info-box">
-        <h6>3</h6>
-        <p>Products Available</p>
-      </div>
-      <div class="info-box">
-        <h6>3</h6>
-        <p>Product Categories</p>
-      </div>
-      <div class="info-box">
-        <h6 class="authorized">Authorized</h6>
-        <p>Official Dealer</p>
       </div>
     </div>
-    <!-- -----------------card------------------------- -->
-    <div class="row">
-        <div class="col-md-4 cards">
-          <div class="card" style="width: 18rem">
-            <img src="images/Asus Rog.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">ASUS</h5>
-              <p class="card-text">ASUS ROG Strix Z790-E Gaming WiFi</p>
-              <span>⭐⭐⭐⭐ (156)</span><br />
-              <del>$529.99</del>
-              <span>$449.99</span>
-            </div>
-          </div>
+    <div class="col-md-4">
+      <div class="card">
+        <img src="images/h3.jpg" alt="">
+        <div class="card-body">
+          <h6>ASUS ROG Strix Z790-E Gaming WiFi</h6>
+          <span>⭐⭐⭐⭐ (156)</span>
+          <h5>$449.99</h5>
         </div>
-
-             <div class="col-md-4 cards">
-          <div class="card" style="width: 18rem">
-            <img
-              src="images/Asus Rog Swift.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">ASUS</h5>
-              <p class="card-text">ASUS ROG Swift 34" Curved Gaming...</p>
-              <span>⭐⭐⭐⭐ (187)</span>
-              <p>$899.99</p>
-            </div>
-          </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <img src="images/h4.jpg" alt="">
+        <div class="card-body">
+          <h6>ASUS ROG Zephyrus G14 Gaming Laptop</h6>
+          <span>⭐⭐⭐⭐ (341)</span>
+          <h5>$1649.99</h5>
         </div>
-
-            <div class="col-md-4 cards">
-          <div class="card" style="width: 18rem">
-            <img
-              src="images/Zephyrus G14 gaming laptop.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">ASUS</h5>
-              <p class="card-text">
-                ASUS ROG Zephyrus G14 Curved Gaming Laptop
-              </p>
-              <span>⭐⭐⭐⭐ (341)</span><br />
-              <del>1899.99</del>
-              <span>$1649.99</span>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    
-
-    <!-- ----------------------------------------------- -->
-  <div class="box112233">
-    <h5>Authorized Dealer Locations</h5>
-    <p>Visit any of our locations to see Dell products in person and get expert advice from our team.</p><br>
-    <div class="parrot">
-      <div class="ssss">
-        <h6>PC-Centre Main Branch</h6>
-        <p>123 Tech Street, Downtown</p>
-        <p>+1 (555) 123-4567</p>
-        <p>Mon-Sat: 9:00 AM - 8:00 PM, Sun: 10:00 AM - 6:00 PM</p>
-      </div>
-      <div class="ssss">
-        <h6>PC-Centre North Service Center</h6>
-        <p>456 Innovation Avenue, North District</p>
-        <p>+1 (555) 234-5678</p>
-        <p>Mon-Sat: 10:00 AM - 7:00 PM, Sun: Closed</p>
-      </div>
-      <div class="ssss">
-        <h6>PC-Centre South Service Center</h6>
-        <p>789 Computer Lane, South District</p>
-        <p>+1 (555) 345-6789</p>
-        <p>Mon-Sat: 9:00 AM - 7:00 PM, Sun: 10:00 AM - 4:00 PM</p>
       </div>
     </div>
   </div>
-    <!-- Footer -->
-    <footer class="container-fluid bg-dark text-white pt-4">
+</section>
+
+<!-- WHY DELL -->
+<section class="why-dell">
+  <div class="container">
+    <h3 class="section-title text-white">Why Choose ASUS?</h3>
+    <div class="row text-center g-4">
+      <div class="col-md-4"><i class="bi bi-lightning-charge"></i><h6>Extreme Performance</h6><p>Gaming & creator-grade hardware</p></div>
+      <div class="col-md-4"><i class="bi bi-fan"></i><h6>Advanced Cooling</h6><p>ROG intelligent thermal systems</p></div>
+      <div class="col-md-4"><i class="bi bi-shield-check"></i><h6>Reliable Build</h6><p>Durable & long-lasting design</p></div>
+    </div>
+  </div>
+</section>
+
+<!-- DEALERS -->
+<section class="container dealer-box">
+  <h3 class="section-title">Authorized ASUS Dealers</h3>
+  <div class="row g-4">
+    <div class="col-md-4"><div class="dealer-card"><h6>Main Branch</h6><p>123 Tech Street</p><p>+1 (555) 123-4567</p></div></div>
+    <div class="col-md-4"><div class="dealer-card"><h6>North Service Center</h6><p>456 Innovation Ave</p><p>+1 (555) 234-5678</p></div></div>
+    <div class="col-md-4"><div class="dealer-card"><h6>South Service Center</h6><p>789 Computer Lane</p><p>+1 (555) 345-6789</p></div></div>
+  </div>
+</section>
+
+
+<footer class="container-fluid text-white pt-4" style="background:linear-gradient(135deg,#000428,#004e92);">
       <div class="row px-4">
         <div class="col-md-3 mb-3">
-          <h5>PC Centre</h5>
+          <a href="index.html">
+          <img
+            src="images/logo (5).png"
+            alt="logo"
+            style="height: 55px; width: 60px; margin-bottom: 10px"
+          />
+          </a>
           <p>
             Your trusted IT solutions partner with over 2 years of experience
             and 1,000+ products from leading manufacturers.
@@ -321,10 +317,18 @@
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Quick Links</h5>
+          <a href="index.html" style="text-decoration: none; color: white">
           <p class="hovee">Home</p>
+          </a>
+          <a href="product.html" style="text-decoration: none; color: white">
           <p class="hovee">Products</p>
+          </a>
+          <a href="faqs.html" style="text-decoration: none; color: white">
           <p class="hovee">Help & Support</p>
-          <p class="hovee">About Us</p>
+          </a>
+          <a href="About.html" style="text-decoration: none; color: white">
+            <p class="hovee">About Us</p>
+          </a>
           <a href="Contact.html" style="text-decoration: none; color: white">
             <p class="hovee">Contact</p>
             </a>
@@ -357,5 +361,6 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
