--- a/faqs.html
+++ b/faqs.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PC Centre</title>
-     <link rel="icon" href="images/logo (2).png" />
+    <title>Help & FAQS - PC Centre</title>
+     <link rel="icon" href="images/logo (5).png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
     ></script>
     <style>
         .support-hero {
-        background: linear-gradient(to right, #0047ab, #002f6c);
+        background:linear-gradient(135deg,#000428,#004e92);
         color: white;
         padding: 70px 20px;
         text-align: center;
@@ -44,6 +44,34 @@
         font-size: 40px;
         color: #0047ab;
       }
+
+      .ik:hover {
+        color:#0047ab;
+        /* box-shadow: 0 0 15px rgba(56,189,248,0.6); */
+        transition: all 0.3s ease;
+        transform: scale(1.2);
+        }
+        /* Hover Dropdown */
+.navbar .dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+}
+
+/* Smooth animation */
+.dropdown-menu {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
     </style>
 </head>
 <body>
@@ -63,14 +91,14 @@
 
     <nav
       class="nab navbar navbar-expand-lg sticky-top shadow"
-      style="background-color: #0047ab"
+      style="background:linear-gradient(135deg,#000428,#004e92);"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
+        <a class="navbar-brand text-white" href="index.html">
           <img
-            src="images/logo (2).png"
+            src="images/logo (5).png"
             alt="logo"
-            style="height: 50px; width: 50px"
+            style="height: 55px; width: 60px"
           />
         </a>
 
@@ -86,10 +114,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
             class="navbar-nav me-auto mb-2 mb-lg-0"
-            style="padding-left: 300px"
+            style="padding-left: 250px"
           >
             <li class="nav-item">
               <a class="nav-link  text-white nav-link-custom" href="index.html">Home</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link  text-white nav-link-custom" href="About.html">About Us</a>
             </li>
 
             <li class="nav-item">
@@ -125,7 +157,7 @@
           </ul>
 
           <div class="d-flex align-items-center gap-3 me-3">
-            <i class="bi bi-search text-white h5 m-0"></i>
+            <i class="bi bi-search text-white h5 m-0 ik"></i>
 
             <div class="position-relative">
               <i class="bi bi-cart text-white h5 m-0"></i>
@@ -176,9 +208,9 @@
         </div>
       </div>
     </div>
-    <div class="help-box text-center">
-      <h5 class="mb-4">How Can We Help You?</h5>
-      <div class="row g-4">
+    <div class="help-box mt-5">
+      <h4 class="mb-4">How Can We Help You?</h4>
+      <div class="row g-4 text-center">
         <div class="col-md-4">
           <div class="card p-4 shadow-sm">
             <h6>Call Us</h6>
@@ -202,49 +234,126 @@
         </div>
       </div>
     </div>
-    <div class="mt-5">
-      <h4 class="mb-3">Frequently Asked Questions</h4>
-      <details class="card p-3 mb-2">
-        <summary class="fw-bold"> What is your return policy?</summary>
-        <p class="mt-2 mb-0">We offer a 30-day return policy on most products. Items must be in original condition with all packaging and accessories. Please contact our customer service team to initiate a return.</p>
-      </details>
 
-      <details class="card p-3 mb-2">
-        <summary class="fw-bold"> Do you provide warranty on products?</summary>
-        <p class="mt-2 mb-0">Yes, all products come with manufacturer warranty. Additionally, we offer extended warranty options at the time of purchase for extra protection.</p>
-      </details>
+    <!-- FAQ Accordion -->
+<div class="accordion mt-5" id="accordionExample">
+  <h4 class="mb-4">Frequently Asked Questions</h4>
 
-      <details class="card p-3 mb-2">
-        <summary class="fw-bold">How long does delivery take?</summary>
-        <p class="mt-2 mb-0">Standard delivery takes 3-5 business days within the city. Express delivery is available for next-day delivery on selected items.</p>
-      </details>
-
-      <details class="card p-3 mb-2">
-        <summary class="fw-bold"> Do you offer installation services?</summary>
-        <p class="mt-2 mb-0">Yes, we provide professional installation services for desktops, networking equipment, and enterprise solutions. Home installation is available for consumers, and on-site installation for businesses.</p>
-      </details>
-
-      <details class="card p-3 mb-2">
-        <summary class="fw-bold">What payment method do you accept?</summary>
-        <p class="mt-2 mb-0">We accept all major credit cards, debit cards, net banking, UPI, and cash on delivery for orders under $500.</p>
-      </details>
-
-      <details class="card p-3 mb-2">
-        <summary class="fw-bold">Can I upgrade components in my existing computer?</summary>
-        <p class="mt-2 mb-0">Absolutely! Our technical team can help you choose compatible upgrades and perform the installation. Bring your PC to our service center or schedule a home visit.</p>
-      </details>
-
-       <details class="card p-3 mb-2">
-        <summary class="fw-bold">Do you provide technical support after purchase?</summary>
-        <p class="mt-2 mb-0">Yes, we have a dedicated team of Technical Support Advisors available via phone, email, and in-person at our service centers. Support is included for all products purchased from PC-Centre.</p>
-      </details>
-
-       <details class="card p-3 mb-2">
-        <summary class="fw-bold">Are refurbished products available?</summary>
-        <p class="mt-2 mb-0">Yes, we offer certified refurbished products at discounted prices. All refurbished items are thoroughly tested and come with a 90-day warranty.</p>
-      </details>
-
+  <!-- 1 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+        What is your return policy?
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        We offer a 30-day return policy on most products. Items must be in original condition with all packaging and accessories.
+      </div>
     </div>
+  </div>
+
+  <!-- 2 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+        Do you provide warranty on products?
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        Yes, all products come with manufacturer warranty. Extended warranty options are also available.
+      </div>
+    </div>
+  </div>
+
+  <!-- 3 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree">
+        How long does delivery take?
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        Standard delivery takes 3–5 business days. Express delivery is also available.
+      </div>
+    </div>
+  </div>
+
+  <!-- 4 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour">
+        Do you offer installation services?
+      </button>
+    </h2>
+    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        Yes, we provide professional installation services for desktops and networking equipment.
+      </div>
+    </div>
+  </div>
+
+  <!-- 5 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive">
+        What payment methods do you accept?
+      </button>
+    </h2>
+    <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        We accept credit cards, debit cards, UPI, net banking, and cash on delivery.
+      </div>
+    </div>
+  </div>
+
+  <!-- 6 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix">
+        Can I upgrade components in my existing PC?
+      </button>
+    </h2>
+    <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        Yes! Our technical team can help you upgrade and install compatible components.
+      </div>
+    </div>
+  </div>
+
+  <!-- 7 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven">
+        Do you provide technical support after purchase?
+      </button>
+    </h2>
+    <div id="collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        Yes, our support team is available via phone, email, and in-store assistance.
+      </div>
+    </div>
+  </div>
+
+  <!-- 8 -->
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight">
+        Are refurbished products available?
+      </button>
+    </h2>
+    <div id="collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        Yes, certified refurbished products are available with a 90-day warranty.
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
     <div class="mt-5 p-4 text-white" style="background:#1e3a8a;border-radius:15px;">
       <h5>Still Need Help?</h5>
       <p>Our dedicated team of Technical Support and Customer Service Advisors is ready to assist you with any product inquiries, technical issues, or service requests. We aim to exceed your expectations with superior after-sales support.</p>
@@ -276,11 +385,16 @@
 
 
 
-     <!-- Footer -->
-    <footer class="container-fluid bg-dark text-white pt-4">
+     <footer class="container-fluid text-white pt-4" style="background:linear-gradient(135deg,#000428,#004e92);">
       <div class="row px-4">
         <div class="col-md-3 mb-3">
-          <h5>PC Centre</h5>
+          <a href="index.html">
+          <img
+            src="images/logo (5).png"
+            alt="logo"
+            style="height: 55px; width: 60px; margin-bottom: 10px"
+          />
+          </a>
           <p>
             Your trusted IT solutions partner with over 2 years of experience
             and 1,000+ products from leading manufacturers.
@@ -293,10 +407,18 @@
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Quick Links</h5>
+          <a href="index.html" style="text-decoration: none; color: white">
           <p class="hovee">Home</p>
+          </a>
+          <a href="product.html" style="text-decoration: none; color: white">
           <p class="hovee">Products</p>
+          </a>
+          <a href="faqs.html" style="text-decoration: none; color: white">
           <p class="hovee">Help & Support</p>
-          <p class="hovee">About Us</p>
+          </a>
+          <a href="About.html" style="text-decoration: none; color: white">
+            <p class="hovee">About Us</p>
+          </a>
           <a href="Contact.html" style="text-decoration: none; color: white">
             <p class="hovee">Contact</p>
             </a>
