--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products - PCcentre</title>
-    <link rel="icon" href="images/logo (2).png" />
+    <link rel="icon" href="images/logo (5).png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -104,7 +104,34 @@
   background: #0047ab;
   color: white;
 }
+.ik:hover {
+        color:#0047ab;
+        /* box-shadow: 0 0 15px rgba(56,189,248,0.6); */
+        transition: all 0.3s ease;
+        transform: scale(1.2);
+        }
 
+        /* Hover Dropdown */
+.navbar .dropdown:hover .dropdown-menu {
+  display: block;
+  margin-top: 0;
+}
+
+/* Smooth animation */
+.dropdown-menu {
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
     </style>
   </head>
   <body>
@@ -124,15 +151,14 @@
 
     <nav
       class="nab navbar navbar-expand-lg sticky-top shadow"
-      style="background-color: #0047ab"
-      class="navbarr"
+      style="background:linear-gradient(135deg,#000428,#004e92);"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-white" href="#">
+        <a class="navbar-brand text-white" href="index.html">
           <img
-            src="images/logo (2).png"
+            src="images/logo (5).png"
             alt="logo"
-            style="height: 50px; width: 50px"
+            style="height: 55px; width: 60px"
           />
         </a>
 
@@ -148,14 +174,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
             class="navbar-nav me-auto mb-2 mb-lg-0"
-            style="padding-left: 300px"
+            style="padding-left: 250px"
           >
             <li class="nav-item">
               <a class="nav-link text-white nav-link-custom" href="index.html">Home</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active text-white nav-link-custom" href="product.html">Products</a>
+              <a class="nav-link  text-white nav-link-custom" href="About.html">About Us</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link text-white nav-link-custom active" href="product.html">Products</a>
             </li>
 
             <li class="nav-item">
@@ -187,7 +217,7 @@
           </ul>
 
           <div class="d-flex align-items-center gap-3 me-3">
-            <i class="bi bi-search text-white h5 m-0"></i>
+            <i class="bi bi-search text-white h5 m-0 ik"></i>
 
             <div class="position-relative">
               <i class="bi bi-cart text-white h5 m-0"></i>
@@ -440,11 +470,16 @@
         </div>
       </div>
     </div>
-    <!-- Footer -->
-    <footer class="container-fluid bg-dark text-white pt-4">
+    <footer class="container-fluid text-white pt-4" style="background:linear-gradient(135deg,#000428,#004e92);">
       <div class="row px-4">
         <div class="col-md-3 mb-3">
-          <h5>PC Centre</h5>
+          <a href="index.html">
+          <img
+            src="images/logo (5).png"
+            alt="logo"
+            style="height: 55px; width: 60px; margin-bottom: 10px"
+          />
+          </a>
           <p>
             Your trusted IT solutions partner with over 2 years of experience
             and 1,000+ products from leading manufacturers.
@@ -457,10 +492,18 @@
 
         <div class="col-md-3 mb-3" style="padding-left: 90px">
           <h5>Quick Links</h5>
+          <a href="index.html" style="text-decoration: none; color: white">
           <p class="hovee">Home</p>
+          </a>
+          <a href="product.html" style="text-decoration: none; color: white">
           <p class="hovee">Products</p>
+          </a>
+          <a href="faqs.html" style="text-decoration: none; color: white">
           <p class="hovee">Help & Support</p>
-          <p class="hovee">About Us</p>
+          </a>
+          <a href="About.html" style="text-decoration: none; color: white">
+            <p class="hovee">About Us</p>
+          </a>
           <a href="Contact.html" style="text-decoration: none; color: white">
             <p class="hovee">Contact</p>
             </a>
@@ -493,11 +536,8 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // =========================
-// SORT FUNCTION
-// =========================
-$("#sortSelect").on("change", function() {
+    <script>  
+  $("#sortSelect").on("change", function() {
     var value = $(this).val();
     var $cards = $(".cards");
     var $container = $(".row");
@@ -520,9 +560,6 @@ $("#sortSelect").on("change", function() {
 });
 
 
-// =========================
-// GRID / LIST VIEW
-// =========================
 $(".view-btn").on("click", function() {
     $(".view-btn").removeClass("active");
     $(this).addClass("active");
