--- a/Dell UltraSharp 27.html
+++ b/Dell UltraSharp 27.html
@@ -35,6 +35,131 @@
       .navbar .dropdown:hover .dropdown-menu { display: block; margin-top: 0; }
       .dropdown-menu { animation: fadeIn 0.3s ease-in-out; }
       @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+      /* ===============================
+   MOBILE RESPONSIVE FIX
+   (NO HTML CHANGE)
+================================ */
+@media (max-width: 768px) {
+
+  /* HEADER */
+  .hea {
+    flex-direction: column;
+    height: auto;
+    padding: 8px 0;
+    gap: 5px;
+    text-align: center;
+  }
+
+  /* NAVBAR FIX */
+  .nav a,
+  .l {
+    padding-left: 0 !important;
+    margin-left: 0 !important;
+  }
+
+  .navbar-nav {
+    padding-left: 0 !important;
+    text-align: center;
+  }
+
+  .ic {
+    justify-content: center;
+    margin: 10px 0;
+  }
+
+  /* HERO */
+  .hero {
+    height: 300px;
+  }
+
+  .h {
+    font-size: 30px !important;
+  }
+
+  .pt {
+    font-size: 14px;
+  }
+
+  /* FEATURES STRIP */
+  .dii {
+    flex-direction: column;
+    height: auto;
+    padding: 20px 0;
+    gap: 20px;
+  }
+
+  /* NEWS & OFFERS */
+  .cdo {
+    height: auto;
+  }
+
+  /* FEATURED DEALS CARDS */
+  .card {
+    width: 100% !important;
+    margin: auto;
+  }
+
+  .card img {
+    width: 100% !important;
+    height: auto !important;
+  }
+
+  /* BADGE POSITION FIX */
+  .badge {
+    right: 10px !important;
+    left: auto !important;
+  }
+
+  /* SHOP BY CATEGORY */
+  .hov {
+    margin-bottom: 15px;
+  }
+
+  /* SERVICES */
+  .our {
+    height: auto;
+    padding-bottom: 30px;
+  }
+
+  /* FOOTER */
+  footer .col-md-3 {
+    padding-left: 15px !important;
+    text-align: center;
+  }
+
+  footer img {
+    margin: auto;
+    display: block;
+  }
+
+  footer p {
+    font-size: 14px;
+  }
+}
+
+/* ===============================
+   EXTRA SMALL DEVICES
+================================ */
+@media (max-width: 480px) {
+
+  .h {
+    font-size: 24px !important;
+  }
+
+  .pt {
+    font-size: 13px;
+  }
+
+  .btn {
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+}
+
     </style>
   </head>
   <body>
@@ -45,7 +170,7 @@
     </div>
 
     <!-- Navbar -->
-    <nav class="nab navbar navbar-expand-lg sticky-top shadow" style="background:linear-gradient(135deg,#000428,#004e92);">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top shadow" style="background:linear-gradient(135deg,#000428,#004e92);">
       <div class="container-fluid">
         <a class="navbar-brand text-white" href="index.html">
           <img src="images/logo (5).png" alt="logo" style="height: 55px; width: 60px"/>
@@ -55,7 +180,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="padding-left: 250px">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="padding-left: 280px">
             <li class="nav-item"><a class="nav-link text-white nav-link-custom" href="index.html">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white nav-link-custom" href="About.html">About Us</a></li>
             <li class="nav-item"><a class="nav-link text-white nav-link-custom" href="product.html">Products</a></li>
