--- a/aceraspire5.html
+++ b/aceraspire5.html
@@ -58,10 +58,7 @@
         }
 
         /* Hover Dropdown */
-.navbar .dropdown:hover .dropdown-menu {
-  display: block;
-  margin-top: 0;
-}
+
 
 /* Smooth animation */
 .dropdown-menu {
@@ -78,6 +75,56 @@
     transform: translateY(0);
   }
 }
+
+/* ===== NAVBAR RESPONSIVE FIX ===== */
+@media (max-width: 991px) {
+
+  .navbar-nav {
+    padding-left: 0 !important;
+    text-align: center;
+  }
+
+  .navbar-nav .nav-link {
+    padding: 12px 0;
+    font-size: 16px;
+  }
+
+  .navbar-collapse {
+    background: linear-gradient(135deg,#000428,#004e92);
+    padding: 15px 0;
+  }
+
+  .navbar-toggler {
+    border-color: #fff;
+  }
+}
+
+/* Dropdown hover ONLY desktop */
+@media (min-width: 992px) {
+  .navbar .dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+  }
+}
+
+/* ===== FOOTER RESPONSIVE FIX ===== */
+@media (max-width: 768px) {
+
+  footer .col-md-3 {
+    padding-left: 0 !important;
+    text-align: center;
+  }
+
+  footer img {
+    margin: auto;
+    display: block;
+  }
+
+  footer p {
+    font-size: 14px;
+  }
+}
+
 
     </style>
   </head>
@@ -97,7 +144,7 @@
     </div>
 
     <nav
-      class="nab navbar navbar-expand-lg sticky-top shadow"
+      class="navbar navbar-expand-lg navbar-dark sticky-top shadow"
       style="background:linear-gradient(135deg,#000428,#004e92);"
     >
       <div class="container-fluid">
@@ -121,10 +168,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
             class="navbar-nav me-auto mb-2 mb-lg-0"
-            style="padding-left: 250px"
+            style="padding-left: 280px"
           >
             <li class="nav-item">
-              <a class="nav-link  text-white nav-link-custom" href="index.html">Home</a>
+              <a class="nav-link active text-white nav-link-custom" href="index.html">Home</a>
             </li>
 
             <li class="nav-item">
@@ -163,11 +210,16 @@
             </li>
           </ul>
 
-                    <div class="d-flex align-items-center gap-3 me-3">
+                <div class="d-flex align-items-center gap-3 me-3">
             <i class="bi bi-search text-white h5 m-0 ik"></i>
 
             <div class="position-relative">
-              <i class="bi bi-cart text-white h5 m-0" id="cartIcon"></i>
+              <i class="bi bi-cart text-white h5 m-0" 
+    id="cartIcon" 
+    type="button" 
+    data-bs-toggle="offcanvas" 
+    data-bs-target="#cartCanvas" 
+    aria-controls="cartCanvas"></i>
               <span
                 class="badge bg-danger position-absolute top-0 start-100 translate-middle px-2"
                 id="cartCount"
