--- a/index.html
+++ b/index.html
@@ -48,8 +48,922 @@
     transform: translateY(0);
   }
 }
+body {
+  overflow-x: hidden;
+  background-color:aliceblue;
+ }
+ .hea{
+    display: flex;
+    justify-content:space-between;
+    text-align: center;
+    align-items: center;
+    height: 7vh;
+    width: 100vw;
+    background-color:#0b132b !important;
+    color: white;
+ }
+ .hea i {
+  margin-right: 8px;
+  /* font-size: 18px; */
+ }
+ .hea p {
+  margin: 0;
+ }
+ .nav a{
+    padding-left: 500px;
+ }
+ .l{
+    margin-left: 250px;
+ }
+ .ic{
+    display: flex;
+    gap: 20px !important;
+    margin-right: 20px;
+ }
+ .badge{
+    border-radius: 200px !important;
+ }
+ .nab{
+    background-color: #0047AB !important;
+ }
+ .foo{
+    height: 380px;
+    width: 100vw;
+    color: white !important;
+    line-height: 20px;
+    padding-top: 20px;
+    background-color: #0b132b !important;
+    padding-top: 50px;
+    margin-top: 100px;
+    display: flex;
+ }
+  * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+ }
+ body {
+  overflow-x: hidden;
+  background-color:aliceblue;
+ }
+ .hea{
+    display: flex;
+    justify-content:space-between;
+    text-align: center;
+    align-items: center;
+    height: 7vh;
+    width: 100vw;
+    background-color:#0b132b !important;
+    color: white;
+ }
+ .hea i {
+  margin-right: 8px;
+  /* font-size: 18px; */
+ }
+ .hea p {
+  margin: 0;
+ }
+ .nav a{
+    padding-left: 500px;
+ }
+ .l{
+    margin-left: 250px;
+ }
+ .ic{
+    display: flex;
+    gap: 20px !important;
+    margin-right: 20px;
+ }
+ .badge{
+    border-radius: 200px !important;
+ }
+ .nab{
+    background-color: #0047AB !important;
+ }
+ .foo{
+    height: 380px;
+    width: 100vw;
+    color: white !important;
+    line-height: 20px;
+    padding-top: 20px;
+    background-color: #0b132b !important;
+    padding-top: 50px;
+    margin-top: 100px;
+    display: flex;
+ }
+ .mid{
+    text-align: center;
+    padding-top: 20px;
+ }
+ .d{
+    padding-top: 20px;
+ }
+ .co{
+    line-height: 40px;
+ }
+ .ga{
+    padding-left: 10px;
+ }
+ .dd{
+    color: #d1d5db !important;
+ }
+ .dow{
+    padding-top: 15px;
+ }
+.time{
+    padding-right: 20px;
+ }
+.list-group-item{
+    border: none !important;
+ }
+ .list-group :hover{
+color: #0047AB;
+ }
+ .heading{
+    font-size: large;
+ }
+ .categories {
+  background: #fff;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+  width: 900px;       
+  max-width: 95%;     
+  margin: 50px auto; 
+  margin-left: 20px;
+  float: left;
+  width: 250px; 
+  padding-right: 20px;
+ }
+ .categories .heading {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 22px;
+ } 
+ .categories .list-group-item {
+  border: none;
+  padding: 14px 10px;
+  background: transparent;
+  font-size: 17px;
+ }
+ .categories-filter-box {
+  background: #fff;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+  width: 900px;
+  max-width: 95%;
+  margin: 50px auto;
+ }
+ .categories-filter-box hr {
+  border: 1px solid #ccc; 
+  margin: 15px 0;         
+ }
+ .product-toolbar {
+  max-width: 900px;     
+  margin: 20px auto;         
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  border-bottom: 1px solid #ddd;
+ }
+ .toolbar-right {
+  display: flex;
+  align-items: center;
+  gap: 8px;                
+ }
+ .product-toolbar label {
+  font-size: 14px;
+ }
+.product-toolbar select {
+  padding: 4px 6px;
+ }
+ .view-btn {
+  border: 1px solid #ccc;
+  background: #f8f8f8;
+  padding: 4px 6px;
+  cursor: pointer;
+ }
+ .view-btn.active {
+  border-color: #007bff;
+  background: #e6f0ff;
+ }
+ .product-toolbar{
+   background: #fff;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+  width: 900px;
+  max-width: 95%;
+  margin: 50px auto;
+ }
+ .card-img-top{
+    height: 240px;
+  }
+  .cards{
+   display: flex;
+   justify-content: center;
+   margin: auto;
+   width: 300px;
+   height: 410px;
+  }
+ .card {
+  margin-bottom: 25px;  
+ }
+ .card {
+  border-radius: 15px;  
+  overflow: hidden;    
+  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+ }
+ .card .btn {
+  width: 100%;
+ }
+ .card img{
+  height: 200px;
+  width: 280px;
+ }
+ .card h5{
+  color: #007bff;
+ }
+ .card .card-text{
+  font-weight: bold;
+ }
 
 
+.container1 {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+  margin: 50px auto;
+  max-width: 1100px;
+   border-radius: 11px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
+  margin: 50px auto; 
+  
+}
+
+.hero {
+  position: relative;
+  height: 450px;
+  overflow: hidden;
+}
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 2;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.typing-box {
+  min-height: 70px;
+}
+.h{
+  font-size: 60px;
+}
+
+.pt{
+  font-size: 20px;
+}
+
+.typewriter {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 3px solid #fff;
+  width: 0;
+  animation: typing 3.5s steps(30, end) forwards,
+             blink 0.7s infinite;
+  
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink {
+  50% { border-color: transparent }
+}
+
+.cdd{
+  padding-left: 60px;
+}
+
+.cddd{
+  padding-left: 120px;
+}
+
+.cdddd{
+  padding-left: 50px;
+}
+
+.dii{
+  height: 200px;
+  width: 100vw;
+  background-color: white !important;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  text-align: center;
+}
+
+.ddddd{
+  padding-right: 40px;
+}
+
+.iii{
+  color: #0047AB;
+}
+
+.product-img img {
+  width: 500px;
+  height: auto;
+  border-radius: 12px;
+}
+
+
+.product-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.price {
+  font-size: 18px;
+  color: #007bff;
+}
+
+.stock {
+  color: #28a745;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+
+.features {
+  list-style: none;
+  padding-left: 0;
+}
+
+.features li {
+  margin-bottom: 6px;
+}
+
+
+.cart-row {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.cart-row input {
+  width: 70px;
+  padding: 8px;
+  text-align: center;
+}
+
+
+.cart-btn {
+  padding: 14px 40px;
+  font-size: 18px;
+  background: #0d6efd;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.cart-btn:hover {
+  background: #084298;
+}
+
+.addtocart h3{
+   font-size: 18px;
+  color: #007bff;
+}
+.secondary-actions {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+
+.add-to-wishlist-btn {
+  padding: 12px 22px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  background: #fff;
+  cursor: pointer;
+}
+
+
+.share-btn {
+  padding: 10px 20px;
+  font-size: 15px;
+  margin-left: 10px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  background: #fff;
+  cursor: pointer;
+}
+
+
+.mini-line {
+  width: 90%;
+  margin: 15px 0;
+  border: 0;
+  border-top: 1px solid #ccc;
+}
+
+
+.service-features {
+  display: flex;
+  gap: 40px;
+  margin-top: 20px;
+}
+
+
+.feature-icon {
+  font-size: 32px;
+  color: #0d6efd;
+  text-align: center;
+}
+
+.feature-item p {
+  text-align: center;
+  margin-top: 5px;
+  font-weight: 500;
+}
+
+
+       
+
+#typing-text::after {
+  content: "|";
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+
+.ts{
+  background-color: orange;
+}
+
+.cdo{
+  height: 250px;
+}
+
+.clo:hover{
+  box-shadow: #ccc;
+}
+
+.card {
+  transition: all 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.3);
+  transform: translateY(-5px);
+}
+
+
+.hov{
+  transition: all 0.3 ease;
+}
+
+.hov:hover{
+  border: 1px solid #0047AB;
+}
+
+.our{
+  height: 250px;
+  width:100vw;
+  background-color: #0047AB;
+}
+
+.our{
+  margin-bottom: 0 !important;
+}
+
+.foo{
+  margin-top: 0 !important;
+  padding-top: 30px;
+}
+
+.our .row,
+.foo .row{
+  margin-left: 0;
+  margin-right: 0;
+}
+
+  .contact-header{
+      background: linear-gradient(to right, #0047AB, #002f6c);
+      color: white;
+      padding: 60px 0;
+      text-align: center;
+    }
+
+    .contact-box{
+      background: white;
+      border-radius: 10px;
+      padding: 30px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    }
+
+    .contact-info i{
+      font-size: 22px;
+      color: #0047AB;
+      margin-right: 10px;
+    }
+
+    .contact-info p{
+      margin: 0;
+      color: #333;
+    }
+
+    .btn-primary{
+      background-color: #0047AB;
+      border: none;
+    }
+
+    .btn-primary:hover{
+      background-color: #003080;
+    }
+
+    .map{
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+        
+
+    .contact-box{
+      background: white;
+      border-radius: 10px;
+      padding: 30px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    }
+
+    .contact-info i{
+      font-size: 22px;
+      color: #0047AB;
+      margin-right: 10px;
+    }
+
+    .contact-info p{
+      margin: 0;
+      color: #333;
+    }
+
+    .btn-primary{
+      background-color: #0047AB;
+      border: none;
+    }
+
+    .btn-primary:hover{
+      background-color: #003080;
+    }
+
+    .map{
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+.hovee{
+  transition: all 0.3s ease;
+}
+.hovee:hover{
+  color:#007bff;
+}
+
+.nab a.active{
+  border-bottom: 3px solid white;
+}
+
+.iinput {
+  transition: 0.3s;
+}
+
+/* ===============================
+   MOBILE RESPONSIVE FIX
+   (NO HTML CHANGE)
+================================ */
+@media (max-width: 768px) {
+
+  /* HEADER */
+  .hea {
+    flex-direction: column;
+    height: auto;
+    padding: 8px 0;
+    gap: 5px;
+    text-align: center;
+  }
+
+  /* NAVBAR FIX */
+  .nav a,
+  .l {
+    padding-left: 0 !important;
+    margin-left: 0 !important;
+  }
+
+  .navbar-nav {
+    padding-left: 0 !important;
+    text-align: center;
+  }
+
+  .ic {
+    justify-content: center;
+    margin: 10px 0;
+  }
+
+  /* HERO */
+  .hero {
+    height: 300px;
+  }
+
+  .h {
+    font-size: 30px !important;
+  }
+
+  .pt {
+    font-size: 14px;
+  }
+
+  /* FEATURES STRIP */
+  .dii {
+    flex-direction: column;
+    height: auto;
+    padding: 20px 0;
+    gap: 20px;
+  }
+
+  /* NEWS & OFFERS */
+  .cdo {
+    height: auto;
+  }
+
+  /* FEATURED DEALS CARDS */
+  .card {
+    width: 100% !important;
+    margin: auto;
+  }
+
+  .card img {
+    width: 100% !important;
+    height: auto !important;
+  }
+
+  /* BADGE POSITION FIX */
+  .badge {
+    right: 10px !important;
+    left: auto !important;
+  }
+
+  /* SHOP BY CATEGORY */
+  .hov {
+    margin-bottom: 15px;
+  }
+
+  /* SERVICES */
+  .our {
+    height: auto;
+    padding-bottom: 30px;
+  }
+
+  /* FOOTER */
+  footer .col-md-3 {
+    padding-left: 15px !important;
+    text-align: center;
+  }
+
+  footer img {
+    margin: auto;
+    display: block;
+  }
+
+  footer p {
+    font-size: 14px;
+  }
+}
+
+/* ===============================
+   EXTRA SMALL DEVICES
+================================ */
+@media (max-width: 480px) {
+
+  .h {
+    font-size: 24px !important;
+  }
+
+  .pt {
+    font-size: 13px;
+  }
+
+  .btn {
+    font-size: 14px;
+    padding: 8px 16px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+}
+
+/* =====================================
+   GLOBAL FIX
+===================================== */
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.container-fluid {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/* =====================================
+   FEATURED DEALS CARDS (MAIN FIX)
+===================================== */
+
+.card {
+  width: 100% !important;
+  height: auto !important;
+  border-radius: 14px;
+  overflow: hidden;
+  box-shadow: 0 8px 22px rgba(0,0,0,0.12);
+  transition: 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 14px 35px rgba(0,0,0,0.18);
+}
+
+.card-img-top {
+  height: 220px !important;
+  object-fit: contain;
+  padding: 15px;
+  background: #f8f9fa;
+}
+
+.card-body {
+  padding: 15px;
+}
+
+.card h6 {
+  font-size: 15px;
+  min-height: 40px;
+}
+
+/* BADGE FIX */
+.card .badge {
+  position: absolute !important;
+  top: 10px !important;
+  right: 10px !important;
+  left: auto !important;
+  border-radius: 20px;
+}
+
+/* =====================================
+   REMOVE CARDS CLASS DAMAGE
+===================================== */
+.cards {
+  width: 100% !important;
+  height: auto !important;
+  display: block !important;
+}
+
+/* =====================================
+   HERO FIX
+===================================== */
+.hero {
+  height: 380px;
+}
+
+@media (max-width: 768px) {
+  .hero {
+    height: 280px;
+  }
+
+  .h {
+    font-size: 28px !important;
+  }
+
+  .pt {
+    font-size: 14px;
+  }
+}
+
+/* =====================================
+   FEATURE STRIP
+===================================== */
+.dii {
+  flex-wrap: wrap;
+  height: auto;
+  padding: 20px 0;
+}
+
+.dii .col-md-3 {
+  margin-bottom: 20px;
+}
+
+/* =====================================
+   SHOP BY CATEGORY
+===================================== */
+.hov {
+  height: 100%;
+}
+
+.hov .card-body {
+  padding: 20px;
+}
+
+/* =====================================
+   FOOTER FIX
+===================================== */
+footer .col-md-3 {
+  text-align: left;
+}
+
+@media (max-width: 768px) {
+  footer .col-md-3 {
+    text-align: center;
+    padding-left: 0 !important;
+  }
+}
+
+/* =====================================
+   MOBILE GRID FIX (MOST IMPORTANT)
+===================================== */
+@media (max-width: 768px) {
+  .col-md-3 {
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 576px) {
+  .card-img-top {
+    height: 180px !important;
+  }
+
+  p {
+    font-size: 14px;
+  }
+}
+
+.cdo{
+  height: 248px !important;
+}
+
+/* ===== NAVBAR RESPONSIVE FIX ===== */
+@media (max-width: 991px) {
+
+  .navbar-nav {
+    padding-left: 0 !important;
+    text-align: center;
+  }
+
+  .navbar-nav .nav-link {
+    padding: 12px 0;
+    font-size: 16px;
+  }
+
+  .navbar-collapse {
+    background: linear-gradient(135deg,#000428,#004e92);
+    padding: 15px 0;
+  }
+
+  .navbar-toggler {
+    border-color: #fff;
+  }
+}
     </style>
   </head>
   <body>
@@ -68,7 +982,7 @@
     </div>
 
     <nav
-      class="nab navbar navbar-expand-lg sticky-top shadow"
+      class="navbar navbar-expand-lg navbar-dark sticky-top shadow"
       style="background:linear-gradient(135deg,#000428,#004e92);"
     >
       <div class="container-fluid">
@@ -92,7 +1006,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul
             class="navbar-nav me-auto mb-2 mb-lg-0"
-            style="padding-left: 250px"
+            style="padding-left: 280px"
           >
             <li class="nav-item">
               <a class="nav-link active text-white nav-link-custom" href="index.html">Home</a>
@@ -278,10 +1192,10 @@
       Featured Deals
     </p>
 
-    <div class="container-fluid">
+    <div class="container-fluid" >
       <div class="row">
         <div class="col-md-3">
-          <div class="card" style="width: 18rem; height: 350px">
+          <div class="card">
             <img
               src="images/h1.jpg"
               class="card-img-top"
@@ -303,7 +1217,7 @@
           </div>
         </div>
         <div class="col-md-3">
-          <div class="card" style="width: 18rem">
+          <div class="card">
             <img
               src="images/h3.jpg"
               class="card-img-top"
@@ -325,7 +1239,7 @@
           </div>
         </div>
         <div class="col-md-3">
-          <div class="card" style="width: 18rem; height: 350px">
+          <div class="card">
             <img
               src="images/h4.jpg"
               class="card-img-top"
@@ -347,7 +1261,7 @@
           </div>
         </div>
         <div class="col-md-3">
-          <div class="card" style="width: 18rem; height: 350px">
+          <div class="card">
             <img
               src="images/h2.jpg"
               class="card-img-top"
