--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@ footer .col-md-3 {
           </div>
         </div>
         <div class="col-md-3">
-          <div class="card">
+          <div class="card cdo">
             <div class="card-header bg-success text-white">✨ New Arrival</div>
             <div class="card-body">
               <h6>New RTX 4090 Graphics Cards In Stock</h6>
