--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Contact Us - PC Centre</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+<link rel="icon" href="images/logo (5).png">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
